Bug 850372 - Delete session store backup during process suspend so that termination-from-suspended-state is treated as a normal shutdown. r=mbrubeck, a=lsblakk